[gd_scene load_steps=5 format=3 uid="uid://78ld4x5akt3w"]

[ext_resource type="Texture2D" uid="uid://k5hwegjvf0ee" path="res://Images/MineGrid.png" id="1_aed8d"]
[ext_resource type="Script" path="res://Scripts/GridButton.gd" id="1_wi6lw"]
[ext_resource type="Texture2D" uid="uid://c50gh88mmybux" path="res://Images/Numbers/Seven.png" id="3_d42o6"]
[ext_resource type="AudioStream" uid="uid://b8u1md6esu1x2" path="res://Sounds/483600__raclure__cursor.wav" id="4_niuis"]

[node name="Button0" type="Button"]
custom_minimum_size = Vector2(32, 32)
action_mode = 0
button_mask = 3
flat = true
script = ExtResource("1_wi6lw")

[node name="ButtonSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("1_aed8d")

[node name="Number" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = ExtResource("3_d42o6")

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_niuis")
volume_db = -6.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
